test/should_fail/inh_attrib_010.grg
actions inh_attrib_010 using inh_attrib_model_010;

rule r {
	pattern {
	}
	replace {
	}
}

